--- a/src/pages/moderators-page/components/main-content/components/filter-section/styles.module.scss
+++ b/src/pages/moderators-page/components/main-content/components/filter-section/styles.module.scss
@@ -12,7 +12,7 @@
 		padding: 0 20px 44px;
 	}
 	.fitters_block__category {
-		@media (min-width: 480px) and (max-width: 1000px) {
+		@media (min-width: 481px) and (max-width: 1000px) {
 			width: 50%;
 		}
 		.fitters_block__category_title {
@@ -27,7 +27,7 @@
 		display: flex;
 		flex-direction: column;
 		gap: 12px;
-		@media (min-width: 480px) and (max-width: 1000px) {
+		@media (min-width: 481px) and (max-width: 1000px) {
 			width: 50%;
 		}
 		.fitters_block__sort_title {
